system/oauth2-proxy/templates/freshrss-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
spec:
  ingressClassName: nginx-external
  rules:
  - host: &host freshrss.grigri.cloud
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
        path: /oauth2
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - *host
      secretName: freshrss-tls-certificate
